# AgentRx

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  troubleshooting.md
agentrx/: __init__.py  __main__.py  cli.py
agentrx/invariants/: checker.py  domain_registry.py  dynamic_invariant_generator.py  static_invariant_generator.py
agentrx/ir/: trajectory_ir.py
agentrx/judge/: judge.py
agentrx/llm_clients/: __init__.py  azure.py  copilot_cli.py  trapi.py
agentrx/pipeline/: globals.py  utils.py
data/policies/: magentic_policy.txt
src/invariants/: checker.py  domain_registry.py  dynamic_invariant_generator.py  static_invariant_generator.py
src/ir/: trajectory_ir.py
src/judge/: judge.py
src/llm_clients/: copilot_cli.py  trapi.py
src/pipeline/: globals.py
src/reports/: analyze_failure_frequencies.py
