[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentrx"
version = "0.1.0"
description = "AgentRx – Agentic trajectory analysis pipeline for invariant checking and LLM-as-a-Judge evaluation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "azure-core>=1.38.0",
    "azure-identity>=1.25.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openai>=1.108.1",
    "python-dotenv>=1.1.0",
    "aiohttp>=3.13.3",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[project.scripts]
agentrx = "agentrx.cli:main"

[tool.setuptools.packages.find]
include = ["agentrx*"]

[tool.setuptools.package-data]
agentrx = ["**/*.json", "**/*.txt"]
