[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentrx"
version = "0.1.0"
description = "AgentRx – Agentic trajectory analysis pipeline for invariant checking and LLM-as-a-Judge evaluation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
agentrx = "agentrx.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["agentrx*"]

[tool.setuptools.package-data]
agentrx = ["**/*.json", "**/*.txt"]
